# -dm_blog_backend

./: Cargo.toml  README.md  Rocket.toml  blog.sqlite-shm  blog.sqlite-wal  default.nix
migrations/2022-12-08-215329_blog/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs  token_const.rs
src/request/: article.rs  auth.rs  comment.rs  mod.rs  tags.rs  user.rs
src/request_guard/: admin.rs  mod.rs  user.rs
src/serialization_struct/: article.rs  comment.rs  mod.rs  role.rs  tags.rs  user.rs
